refactor for user role
